# mini-search-engine

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  config.py  db.py  main.py  models.py  pyproject.toml
backend/ai_overview/: chat.py  generator.py
backend/ai_overview/docs/: 01-ai-overviews-and-rag.md
backend/api/: jobs.py  playground.py
backend/crawler/: fetcher.py  manager.py  parser.py
backend/crawler/docs/: 01-how-web-crawling-works.md  02-crawl-strategies-bfs-vs-dfs.md  03-robots-txt-deep-dive.md  04-how-google-crawls-the-web.md  05-multi-domain-crawling-and-content-filtering.md
backend/indexer/: indexer.py  stemmer.py  tokenizer.py
backend/indexer/docs/: 01-inverted-index.md  02-tokenization-and-stopwords.md  03-database-performance-lessons.md
backend/knowledge/: graph.py  query.py
backend/ner/: extractor.py
backend/rag/: chunker.py  embedder.py  fanout.py  retriever.py
backend/rag/docs/: 01-chunking-and-embeddings.md  02-query-fanout.md  03-hybrid-retrieval.md
backend/ranker/: bm25.py  pagerank.py  reranker.py
backend/ranker/docs/: 01-bm25-algorithm.md  02-pagerank-algorithm.md  03-combining-signals.md  04-porter-stemming.md  05-bm25f-field-weighting.md  06-database-indexes.md  07-query-logging.md  08-neural-reranking.md  09-performance-optimization.md  10-ai-pipeline-architecture.md  11-crawler-indexer-roadmap.md
backend/scripts/: build_rag.py  crawl.py  index.py  pagerank.py  search_test.py
backend/search/: engine.py  explainer.py  intent.py  onebox.py  spellcheck.py
backend/sports/: api.py  detector.py
(+63 files in other folders)
